Fix width looks on mobile

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -529,6 +529,14 @@ body {
     .chara-detail-container .right-col-menu {
         padding:0px
     } */
+    #skill-contents .skillstats .skilldesc {
+        min-width: 150px;
+        border-radius: 2px;
+        padding:5px;
+        padding-right: 20px !important;
+        width: 100%;
+        background:#444444;
+    }
     #lefthandtoggle{
         display:unset;
     }
